--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
         <li>Feature</li>
         <li>Login</li>
     </div>
-    
+    <section class="main">
+        <div class="image">
+            <img src="./images/34eb9b1bef10274e7e01.jpg" alt="">
+        </div>
+    </section>
 </body>
 </html>
